<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <ToggleButton
        android:id="@+id/toggleButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:checked="true"
        android:text="@string/enable" />

    <ImageView
        android:id="@+id/app_icon"
        android:layout_width="@android:dimen/app_icon_size"
        android:layout_height="@android:dimen/app_icon_size"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/toggleButton"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="11dip"
        android:layout_marginTop="10dip"
        android:background="@drawable/icon"
        android:scaleType="fitCenter" />

    <Button
        android:id="@+id/activty_picker_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toggleButton"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip"
        android:layout_toRightOf="@id/app_icon"
        android:text="@string/pick_an_activity" >
    </Button>

    <TextView
        android:id="@+id/music_volume_tag"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/activty_picker_button"
        android:layout_marginTop="10dip"
        android:text="@string/music_volume" />

    <SeekBar
        android:id="@+id/music_volume"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/music_volume_tag"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip" />

    <CheckBox
        android:id="@+id/confirmCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/music_volume"
        android:layout_marginLeft="10dip"
        android:layout_marginTop="10dip"
        android:text="@string/confirm" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/confirmCheckBox"
        android:layout_marginLeft="10dip"
        android:layout_marginRight="10dip"
        android:layout_marginTop="10dip" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/about"
                android:text="@string/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <TextView
                android:layout_marginTop="10dip"
                android:id="@+id/version"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center" />
        </LinearLayout>
    </ScrollView>

</RelativeLayout>